--- a/hello/404.html
+++ b/hello/404.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Hello!</title>
   </head>
-  <body style="background-color:blue;">
-    <h1>Hello!</h1>
-    <p>Hi from Rust</p>
+  <body>
+    <h1>Oops!</h1>
+    <p>Sorry, I don't know what you're asking for.</p>
   </body>
 </html>
